Primera version de las actividades

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,22 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.grimi.cashless.MainActivity">
+    tools:context="com.example.grimi.cashless.MainActivity"
+    android:background="#f7f6f6">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
+
+        <ImageView
+            android:layout_width="383dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/Logo"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/logo_main"
+            android:background="#f7f6f6" />
+    </LinearLayout>
 </RelativeLayout>
