--- a/app/src/main/res/layout/pagar.xml
+++ b/app/src/main/res/layout/pagar.xml
@@ -4,44 +4,25 @@
     android:layout_height="match_parent"
     android:background="#f7f6f6">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView2"
-        android:src="@drawable/logo_main"
-        android:layout_marginBottom="465dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nombre_Restaurante"
         android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="95dp"
+        android:layout_marginTop="33dp"
         android:background="#fc0606"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:weightSum="1"
         android:layout_below="@+id/textView"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="74dp"
-        android:weightSum="1">
-
-        <TextView
-            android:layout_width="193dp"
-            android:layout_height="wrap_content"
-            android:text="Credit Card No"
-            android:id="@+id/ccname"
-            android:layout_weight="0.06"
-            android:background="#fc0606"
-            android:textColor="#000000"
-            />
+        android:layout_marginTop="30dp">
 
         <EditText
             android:layout_width="match_parent"
@@ -51,17 +32,8 @@
             android:id="@+id/editText"
             android:layout_gravity="right"
             android:layout_weight="0.06"
-            android:background="#FF002AFF"
-            android:textColor="#000000"/>
-        <TextView
-            android:layout_width="193dp"
-            android:layout_height="wrap_content"
-            android:text="CVC"
-            android:id="@+id/cvcname"
-            android:layout_weight="0.06"
-            android:background="#fc0606"
             android:textColor="#000000"
-            />
+            android:hint="Credit Card Number" />
 
         <EditText
             android:layout_width="match_parent"
@@ -71,29 +43,19 @@
             android:id="@+id/CVC"
             android:layout_gravity="right"
             android:layout_weight="0.06"
-            android:background="#FF002AFF"
-            android:textColor="#000000"/>
-
-        <TextView
-            android:layout_width="193dp"
-            android:layout_height="wrap_content"
-            android:text="Fecha de expiracion"
-            android:id="@+id/datename"
-            android:layout_weight="0.06"
-            android:background="#fc0606"
             android:textColor="#000000"
-            />
+            android:hint="CVC" />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="numberPassword"
             android:ems="10"
             android:id="@+id/DATE"
             android:layout_gravity="right"
             android:layout_weight="0.06"
-            android:background="#FF002AFF"
-            android:textColor="#000000"/>
+            android:textColor="#000000"
+            android:inputType="date"
+            android:hint="Fecha de Expiración" />
 
         <Button
             android:layout_width="wrap_content"
