--- a/app/src/main/res/layout/location.xml
+++ b/app/src/main/res/layout/location.xml
@@ -26,6 +26,7 @@
         android:paddingTop="2dp"
         android:paddingBottom="2dp"
         android:layout_alignParentTop="true"
+        android:entries="@array/array_restaurant"
         android:layout_alignParentStart="true" />
 
     <Spinner
@@ -38,6 +39,7 @@
         android:paddingLeft="140dp"
         android:paddingRight="10dp"
         android:paddingTop="2dp"
+        android:entries="@array/array_table"
         android:paddingBottom="2dp"
         android:layout_below="@+id/rest"
         android:layout_alignParentStart="true" />
@@ -47,9 +49,9 @@
         android:layout_height="wrap_content"
         android:text="Check In"
         android:id="@+id/button_checkin"
+        android:layout_marginTop="81dp"
         android:layout_below="@+id/mesa"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp" />
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
