--- a/app/src/main/res/layout/location.xml
+++ b/app/src/main/res/layout/location.xml
@@ -5,7 +5,7 @@
     android:background="#f7f6f6">
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
         android:src="@drawable/logo_main"
@@ -13,45 +13,56 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
 
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/rest"
-        android:layout_marginTop="211dp"
-        android:background="#0396d0"
-        android:textAlignment="center"
-        android:spinnerMode="dropdown"
-        android:paddingLeft="140dp"
-        android:paddingRight="10dp"
-        android:paddingTop="2dp"
-        android:paddingBottom="2dp"
-        android:layout_alignParentTop="true"
-        android:entries="@array/array_restaurant"
-        android:layout_alignParentStart="true" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/mesa"
+        android:layout_alignEnd="@+id/button_checkin"
+        android:layout_marginBottom="63dp">
 
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/mesa"
-        android:background="#f56769"
-        android:textAlignment="center"
-        android:spinnerMode="dropdown"
-        android:paddingLeft="140dp"
-        android:paddingRight="10dp"
-        android:paddingTop="2dp"
-        android:entries="@array/array_table"
-        android:paddingBottom="2dp"
-        android:layout_below="@+id/rest"
-        android:layout_alignParentStart="true" />
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/rest"
+            android:layout_marginTop="211dp"
+            android:background="#0396d0"
+            android:textAlignment="center"
+            android:spinnerMode="dropdown"
+            android:paddingLeft="140dp"
+            android:paddingRight="10dp"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
+            android:layout_alignParentTop="true"
+            android:entries="@array/array_restaurant"
+            android:layout_alignParentStart="true" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Check In"
-        android:id="@+id/button_checkin"
-        android:layout_marginTop="81dp"
-        android:layout_below="@+id/mesa"
-        android:layout_centerHorizontal="true" />
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/mesa"
+            android:background="#f56769"
+            android:textAlignment="center"
+            android:spinnerMode="dropdown"
+            android:paddingLeft="140dp"
+            android:paddingRight="10dp"
+            android:paddingTop="2dp"
+            android:entries="@array/array_table"
+            android:paddingBottom="2dp"
+            android:layout_below="@+id/rest"
+            android:layout_alignParentStart="true" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Check In"
+            android:id="@+id/button_checkin"
+            android:layout_marginTop="81dp"
+            android:layout_below="@+id/mesa"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal" />
+
+    </LinearLayout>
 
 
 </RelativeLayout>
