--- a/app/src/main/res/layout/pagar.xml
+++ b/app/src/main/res/layout/pagar.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:weightSum="1"
-        android:layout_below="@+id/textView"
+        android:layout_below="@+id/restaurantTitle"
         android:layout_alignParentStart="true"
         android:layout_marginTop="30dp">
 
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Restaurante 1"
-            android:id="@+id/textView"
+            android:id="@+id/restaurantTitle"
             android:layout_marginTop="33dp"
             android:background="#eae9e8"
             android:textColor="#000000"
