Tip calculator funcionando, envia toast a la actividad de pagos

--- a/app/src/main/res/layout/check_personal.xml
+++ b/app/src/main/res/layout/check_personal.xml
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
             android:inputType="number"
             android:ems="10"
-            android:id="@+id/editText2"
+            android:id="@+id/inputTip"
             android:layout_marginRight="0dp"
             android:hint="% de Propina"
             android:layout_alignBottom="@+id/subtotal"
