--- a/app/src/main/res/layout/check_personal.xml
+++ b/app/src/main/res/layout/check_personal.xml
@@ -33,6 +33,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Checkout"
+        android:onClick="onBuyPressed"
         android:id="@+id/button_checkout"
         android:layout_marginBottom="29dp"
         android:layout_alignParentBottom="true"
@@ -67,7 +68,7 @@
             android:layout_height="wrap_content"
             android:inputType="number"
             android:ems="10"
-            android:id="@+id/editText2"
+            android:id="@+id/propina"
             android:layout_marginRight="0dp"
             android:hint="% de Propina"
             android:layout_alignBottom="@+id/subtotal"
