--- a/app/src/main/res/layout/pagar.xml
+++ b/app/src/main/res/layout/pagar.xml
@@ -64,6 +64,7 @@
             android:layout_width="279dp"
             android:layout_height="wrap_content"
             android:text="Pagar "
+            android:onClick="onBuyPressed"
             android:id="@+id/pay_button"
             android:layout_gravity="center_horizontal" />
 
